Fixe display alignment
Float left and element size fixes so they appear aligned

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,3 @@
   height: 100vh;
   background-color: #f0f0f0;
 }
-
-canvas {
-  background-color: white;
-}
